--- a/index.html
+++ b/index.html
@@ -1,45 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&family=Poppins&family=Roboto&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&family=Poppins&family=Roboto&family=Work+Sans:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-<nav>
-        <h2>G3 Architecht</h2>
-   
-    <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact us</li>
-        <li>Login</li>
-    </ul>
-</div>
-</nav>
-<section class="banner-section">
-    <!-- <div class="bannner-description"> -->
-<h1>Brand New <br>
-    Group of Architects 
-    </h1>
-<p>Antoni Gaudí Gaudí spent his entire career in Barcelona, where he built all of his projects, the most <br> famous of which  is the 1883 cathedral known as La Sagrada Familia, still under construction today.</p>
-    </div>
-    <button class="explore-more-btn">Explore More</button>
-    <img src="images/banner.png" alt="">
+      <nav>
+        <h2 class="heading">G3 Architecht</h2>
 
-</section>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact us</li>
+          <li>Login</li>
+        </ul>
+      </nav>
+      <section class="banner-section">
+        <div class="bannner-description">
+          <h1 class="banner-title">
+            Brand New <br />
+            Group of Architects
+          </h1>
+          <p class="text">
+            Antoni Gaudí Gaudí spent his entire career in Barcelona, where he
+            built all of his projects, the most <br />
+            famous of which is the 1883 cathedral known as La Sagrada Familia,
+            still under construction today.
+          </p>
+        </div>
+        <button class="btn-one">Explore More</button>
+        <img src="images/banner.png" alt="" />
+      </section>
     </header>
     <main>
+      <section class="feature-list">
+        <div class="section-image">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class=".section-text">
+          <h2 class="features-title">
+            <span class="one">Quick list</span> of Our <br />
+            <span class="two">Features</span>
+          </h2>
+          <p class="text">
+            If you’re an architecture firm, your website needs to accomplish
+            three things: present your body of work, demonstrate your expertise
+            and clearly communicate your ability to address a buyer’s
+            challenges. While architects understand good design, their websites
+            need to deliver more than aesthetics.
+          </p>
+          <button class="btn-two">Explore More</button>
+        </div>
+      </section>
+      <section class="lovely-features">
+        <div class="all-the-features">
+          <div class="feature">
+            <div class="parent">
+              <div class="line"></div>
+              <h3 class="heading">
+                Features you will <br />
+                love & enjoy
+              </h3>
+            </div>
+            <p class="text">
+              Every architect knows that first impressions are essential. But
+              when it comes to designing their website, first impressions will
+              only take a firm so far.The Hinge Research Institute has found
+              that 9 out of 10 professional services buyers will rule out a firm
+              before ever speaking with them and more than 8 out of 10 will
+              check out a firm’s website to evaluate them as a potential
+              provider.
+            </p>
+          </div>
+          <div class="feature-one">
+            <h2 class="feature-title">Dexktop & Mobile Version</h2>
+            <p class="text">
+              The best architecture firm websites use their brand strategy to
+              inform their design choices. Strategic design means using imagery,
+              typography, color and layout to tell your story and engage your
+              audience in a way that builds credibility and trust.
+            </p>
+          </div>
+          <div class="feature-one">
+            <h2 class="feature-title">Drag & Drop Builder</h2>
+            <p class="text">
+              Beautiful, vibrant photography plays a critical role on an
+              architecture firm’s website. We are visual beings, and gorgeous,
+              compelling images convey credibility and stimulate desire for your
+              services. While many of the images on your website will illustrate
+              your portfolio and showcase your body of work, others may serve a
+              purely aesthetic function.
+            </p>
+          </div>
+          <div class="feature-one">
+            <h2 class="feature-title">Awesome Modern Designn</h2>
+            <p class="text">
+              Project photos are important, but don’t forget the descriptions of
+              the projects themselves. Be sure to explain the client’s challenge
+              and how you solved it. Try to tell a compelling story. You may
+              even want to connect your case stories to the appropriate team
+              bios, putting faces and specific expertise to your best work..
+            </p>
+          </div>
+          <div class="feature-one">
+            <h2 class="feature-title">Super Easy to Edit</h2>
+            <p class="text">
+              TFrom site architecture and content organization to broken links
+              and slow-loading pages, a great user experience is one of the most
+              critical elements of any architecture firm’s website. Simply put,
+              a website that isn’t user-friendly can frustrate and deter
+              potential clients and job candidates.
+            </p>
+          </div>
+        </div>
+        <div class="parent">
+          <img src="images/architect.png" alt="" class="lady" />
+          <div class="experience">
+            <h1>10+Year</h1>
+            <h3>Experience</h3>
+          </div>
+        </div>
+      </section>
+      <section class="facts">
+        <div class="facts-des">
+          <h2 class="heading second">Some Facts</h2>
+          <p class="text">
+            There are many variations of passages of Lorem Ipsum available, but
+            <br />
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="achievement">
+          <div class="box">
+            <img src="images/icons/ribon.png" alt="" />
+            <h1>54</h1>
+            <h3>Awards Winnings</h3>
+          </div>
+          <div class="box">
+            <img src="images/icons/projects.png" alt="" />
+            <h1>1458</h1>
+            <h3>Project Finished</h3>
+          </div>
+          <div class="box">
+            <img src="images/icons/projects.png" alt="" />
+            <h1>590</h1>
+            <h3>Clients Worked</h3>
+          </div>
+          <div class="box">
+            <img src="images/icons/customers.png  " alt="" />
+            <h1>22578</h1>
+            <h3>Email Send</h3>
+          </div>
+        </div>
+      </section>
+      <h1 class="heading">Some of the best Artchitechture</h1>
+      <section class="extra-section">
+        <div class="best-architecture">
+          <img src="images/download.jpg" alt="" />
+          <img src="images/image.jpg" alt="" />
+          <img src="images/images.jpg" alt="" />
+          <img src="images/dancing.jpg" alt="" />
+        </div>
+        <div>
+          <blockquote>
+            1. "Architecture is basically a container of something. I hope they
+            will enjoy not so much the teacup, but the tea." – Yoshio Taniguchi
 
+            <br />
+            2. "A profound design process eventually makes the patron, the
+            architect, and every occasional visitor in the building a slightly
+            better human being." – Juhani Pallasmaa
+
+            <br />
+            3. "A doctor can bury his mistakes but an architect can only advise
+            his clients to plant vines." -Frank Lloyd Wright
+          </blockquote>
+        </div>
+      </section>
+      <div class="sponsor-section">
+        <h2 class="heading">Our Sponspors</h2>
+        <p class="text">
+          Sponsirhsip is most important to become a succeful eatablished
+          company. Also <br />
+          sponsorship create brand exposure in the the market, which helps to
+          generate reveneu
+        </p>
+      </div>
+      <div class="company">
+        <img src="images/sponsors/spotify.png" alt="" />
+        <img src="images/sponsors/amazon.png" alt="" />
+        <img src="images/sponsors/google.png " alt="" />
+        <img src="images/sponsors/telerama.png" alt="" />
+        <img src="images/sponsors/figma.png" alt="" />
+      </div>
     </main>
     <footer>
-
+      <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
-</body>
+  </body>
 </html>
